small spacing fix

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -385,7 +385,7 @@ enough scrolling
 
 .end-title {
   max-width: 960px;
-  margin: 100px auto 15px;
+  margin: 90px auto 15px;
   text-align: center;
   color: #fff;
   font-size: 2em;
